1. 新增 OAuth2 接口

--- a/01-ww-common/ww-common-security/pom.xml
+++ b/01-ww-common/ww-common-security/pom.xml
@@ -11,4 +11,20 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ww-common-security</artifactId>
 
+    <dependencies>
+
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!-- OAuth2 Resource Server -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+
+    </dependencies>
+
 </project>
