--- a/04-ww-module-system-3200/ww-module-system-api/pom.xml
+++ b/04-ww-module-system-3200/ww-module-system-api/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>feign-okhttp</artifactId>
         </dependency>
 
+        <!-- Api文档 -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- common core -->
         <dependency>
             <groupId>cn.wickson.tech.collective</groupId>
